--- a/CSS/game.css
+++ b/CSS/game.css
@@ -23,7 +23,7 @@ body{
 .score{
     margin-top: 60px;
 }
-.reset{
+.reset,.auto-play-button{
     background-color: white;
     border: none;
     font-size: 15px;
