--- a/CSS/game.css
+++ b/CSS/game.css
@@ -23,7 +23,7 @@ body{
 .score{
     margin-top: 60px;
 }
-.reset,.auto-play-button{
+.js-auto-play-button,.reset-score-button{
     background-color: white;
     border: none;
     font-size: 15px;
@@ -32,4 +32,28 @@ body{
     margin-top: 50px;
     border-radius: 30px;
     background-color: rgb(47, 252, 47);
+}
+/* See 12r.css for the full code. */
+.reset-score-button,
+.auto-play-button,
+/*
+  Reuse the style for the reset-score-button
+  by using a comma in the selector.
+*/
+.reset-confirm-button {
+  background-color: white;
+  border: none;
+  font-size: 15px;
+  padding: 8px 15px;
+  cursor: pointer;
+}
+
+/*
+  Add extra margin to the confirm buttons.
+  In CSS, we can add multiple sets of styles
+  to the same class. Styles written later
+  will override styles written before.
+*/
+.reset-confirm-button {
+  margin-left: 10px;
 }
